@@ -35,6 +35,9 @@ Core and Builtins
   when turned into an exception: in this case the exception simply
   gets ignored.
 
+- Issue #7372: Fix pstats regression when stripping paths from profile
+  data generated with the profile module.
+
 - Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
   entries, consider the first one.
 
